--- a/sidekiq-book/Gemfile
+++ b/sidekiq-book/Gemfile
@@ -1,7 +1,7 @@
 source "https://rubygems.org"
 git_source(:github) { |repo| "https://github.com/#{repo}.git" }
 
-ruby "3.2.3"
+ruby "3.2.5"
 
 gem "rails", "~> 7.0.4", ">= 7.0.4.2"
 gem "sprockets-rails"
@@ -38,6 +38,9 @@ gem "faker"
 
 # This is used to run the dev environment
 gem "foreman"
+
+# Sidekiq is the background job processor we'll be using
+gem "sidekiq"
 
 # Prevents our workers from running too long if a request
 # doesn't return in time.
